// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlassPanel applies custom intensity and tint 1`] = `
<View
  style={
    [
      {
        "borderRadius": 24,
        "elevation": 24,
        "overflow": "visible",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 20,
          "width": 0,
        },
        "shadowOpacity": 0.35,
        "shadowRadius": 35,
      },
      undefined,
    ]
  }
>
  <View
    experimentalBlurMethod="dimezisBlurView"
    intensity={50}
    style={
      {
        "backgroundColor": "rgba(255, 255, 255, 0.1)",
        "borderColor": "rgba(255, 255, 255, 0.2)",
        "borderRadius": 24,
        "borderWidth": 1,
        "overflow": "hidden",
      }
    }
    testID="blur-view"
    tint="light"
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <Text>
        Custom Props
      </Text>
    </View>
  </View>
</View>
`;

exports[`GlassPanel applies custom style 1`] = `
<View
  style={
    [
      {
        "borderRadius": 24,
        "elevation": 24,
        "overflow": "visible",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 20,
          "width": 0,
        },
        "shadowOpacity": 0.35,
        "shadowRadius": 35,
      },
      {
        "margin": 10,
      },
    ]
  }
>
  <View
    experimentalBlurMethod="dimezisBlurView"
    intensity={30}
    style={
      {
        "backgroundColor": "rgba(255, 255, 255, 0.1)",
        "borderColor": "rgba(255, 255, 255, 0.2)",
        "borderRadius": 24,
        "borderWidth": 1,
        "overflow": "hidden",
      }
    }
    testID="blur-view"
    tint="dark"
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <Text>
        Styled Content
      </Text>
    </View>
  </View>
</View>
`;

exports[`GlassPanel renders correctly with default props 1`] = `
<View
  style={
    [
      {
        "borderRadius": 24,
        "elevation": 24,
        "overflow": "visible",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 20,
          "width": 0,
        },
        "shadowOpacity": 0.35,
        "shadowRadius": 35,
      },
      undefined,
    ]
  }
>
  <View
    experimentalBlurMethod="dimezisBlurView"
    intensity={30}
    style={
      {
        "backgroundColor": "rgba(255, 255, 255, 0.1)",
        "borderColor": "rgba(255, 255, 255, 0.2)",
        "borderRadius": 24,
        "borderWidth": 1,
        "overflow": "hidden",
      }
    }
    testID="blur-view"
    tint="dark"
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <Text>
        Test Content
      </Text>
    </View>
  </View>
</View>
`;
